--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -11,14 +11,7 @@
 
 	<div>
 	
-		<div class="alert alert-danger" th:if="${param.error}">Datos Incorrectos</div>
-		<div class="alert alert-warning" th:if="${param.logout}">Sesión Finalizada.</div>
-		<br>
-
-		 
-
-
-
+	
 		
 	<br>
 	<br>
@@ -28,12 +21,12 @@
 						<form th:action="@{/home}" method="post" class="col-6 align-self-center">
 							<div class="card p-5 ">
 
-								<label>Usuario:</label>
+								<label>Identificador:</label>
 								<div class="input-group form-group">
 										<div class="input-group-prepend">
 										<span class="input-group-text"><i class="fas fa-user"></i></span>
 									</div>
-									<input placeholder="username" name="username" type="text"	id="username" class="form-control" />
+									<input placeholder="identificador" name="id" type="number"	id="id" class="form-control" />
 								</div>
 								
 								<label>Contraseña:</label>
@@ -41,7 +34,7 @@
 										<div class="input-group-prepend">
 										<span class="input-group-text"><i class="fas fa-key"></i></span>
 									</div>
-									<input placeholder="password" id="password" name="password" type="password" class="form-control" />
+									<input placeholder="password" id="pw" name="pw" type="password" class="form-control" />
 								</div>
 								<br>
 								<hr>
